@@ -1,0 +1,10 @@
+package screens;
+
+public interface AbstractScreen {
+	
+	void initGeneralStart();
+	
+	void printReenterText();
+
+	void screenStartAndLoop();
+}
